# aueb-computer-graphics-course

./: CMakeLists.txt  README.md
.cache/clangd/index/: glad.c.9DC3FE40F8F5E111.idx  glad.h.3AA08AF100767E3B.idx  imconfig.h.77F82D28A39B9423.idx  imgui.cpp.66E7A03ED5F01D11.idx  imgui.h.6D83636CECA52289.idx  imgui_demo.cpp.554002F00E3E697D.idx  imgui_draw.cpp.4BB3967DD3D0497D.idx  imgui_impl_glfw.cpp.FE13E8F79289EADB.idx  imgui_impl_glfw.h.AC2B85F98DDAEB4F.idx  imgui_impl_opengl3.cpp.274CD05C0C743D52.idx  imgui_impl_opengl3.h.08E1A2D034E3EAEC.idx  imgui_impl_opengl3_loader.h.49694E11501FF2B3.idx  imgui_internal.h.AE18A2D72F62799B.idx  imgui_tables.cpp.DF4270AFFC43BEFF.idx  imgui_widgets.cpp.E752396EAB2B3B9D.idx  imstb_rectpack.h.C0C829B2637EEDDC.idx  imstb_textedit.h.CDA0F231EDBE18C4.idx  imstb_truetype.h.2DA3BB1E1320AECE.idx  main.cpp.07136E25988B0CDC.idx  stb_image.h.30A6A5D8D8B92054.idx  tiny_obj_loader.h.88AACA9923850EF7.idx
lib/glad/: glad.c  glad.h
src/: main.cpp
